--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
-<body>
-    <div class="input-temp d-flex flex-md-column align-items-center gap-5 pt-5">
-        <input class="temp ps-3" type="text" id="kelvin" placeholder="°K">
-        <input class="temp ps-3" type="text" id="fahrenheit" placeholder="°F">
-        <input class="temp ps-3" type="text" id="Newton" placeholder="°N">
+<body class="d-flex align-items-center">
+    <div class="input-temp d-flex flex-md-column align-items-center gap-3 pt-5">
+        <h3>Kelvin (°K)</h3>
+        <input class="temp ps-3 border-0 rounded-pill" type="text" id="kelvin" placeholder="°K">
+        <h3>Fahrenheit (°F)</h3>
+        <input class="temp ps-3 border-0 rounded-pill" type="text" id="fahrenheit" placeholder="°F">
+        <h3>Newton (°N)</h3>
+        <input class="temp ps-3 border-0 rounded-pill" type="text" id="Newton" placeholder="°N">
     </div>
     
 
