--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Honk&family=Spirax&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 <body >
+    
     <div class="container-fluid">
-        
+        <!-- <div class="navbar">
+            <img src="./Assets/Images/Temperature_Converter-logos-removebg-preview.png">
+        </div> -->
+        <!-- <img src="./Assets/Images/output-onlinepngtools.png"  class="logo"> -->
         <img src="./Assets/Images/sky1.png" class="cloud1">
         <img src="./Assets/Images/sky2.png" class="cloud2">
         <img src="./Assets/Images/sky3.png" class="cloud3">
@@ -22,6 +25,7 @@
         <img src="./Assets/Images/sky5.png" class="cloud5">
         <img src="./Assets/Images/sky5.png" class="cloud6">
         <img src="./Assets/Images/sky3.png" class="cloud7">
+        <img src="./Assets/Images/clearoff-ai-brush-removebg-igle3skg1.png" class="cloud8">
 
         <div class="input-temp ">                                      
             <h3>Kelvin (°K)</h3>
