transform property added to input-temp class

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <img src="./Assets/Images/Temperature_Converter-logos-removebg-preview.png">
         </div> -->
         <!-- <img src="./Assets/Images/output-onlinepngtools.png"  class="logo"> -->
+        <img src="./Assets/Images/bird.gif" class="birds">
         <img src="./Assets/Images/sky1.png" class="cloud1">
         <img src="./Assets/Images/sky2.png" class="cloud2">
         <img src="./Assets/Images/sky3.png" class="cloud3">
