--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
 <body >
     
     <div class="container-fluid">
+        <div class="container">
+            <div class="cloud front">
+              <span class="left-front"></span>
+              <span class="right-front"></span>
+            </div>
+            <span class="sun sunshine"></span>
+            <span class="sun"></span>
+            <div class="cloud back">
+              <span class="left-back"></span>
+              <span class="right-back"></span>
+            </div>
+          </div>
         <!-- <div class="navbar">
             <img src="./Assets/Images/Temperature_Converter-logos-removebg-preview.png">
         </div> -->
